--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="other/lab1classes(1).jar"/>
+	<classpathentry kind="lib" path="other/queue(1).jar"/>
+	<classpathentry kind="lib" path="other/stack(1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
