--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,10 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="other/aod_lab1.jar"/>
+	<classpathentry kind="lib" path="other/aod_lab1/aod_lab1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/AoD_Lab1/other/aod_lab1/docs.zip!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
